Fri Apr 18 15:40:05 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c: use uintptr_t instead of VALUE because they are not ruby
	  object.

Fri Apr 18 14:51:42 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c: check str_strlen's argument, and add comment or
	  use NULL if simply it uses str's enc.

Fri Apr 18 14:32:40 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (str_strlen): use enc_strlen if the coderange is known.

Fri Apr 18 14:21:21 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (enc_strlen): move UTF-8 optimization from str_strlen to
	  enc_strlen.

Fri Apr 18 08:50:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_getcwd_malloc): check if getcwd allocates
	  buffer if NULL is given [ruby-core:62072] [Bug #9752]

Thu Apr 17 16:28:10 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* prelude.rb: [DOC] Update Thread::exclusive docs by @stevenharman.

Thu Apr 17 10:03:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils#copy_entry): update rdoc about
	  preserve option and permissions, following r31123.
	  [ruby-core:62065] [Bug #9748]

Wed Apr 16 23:47:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (dont_recycle_block_arg): fix condition to recycle block
	  argument.  lambda with rest can get internal array directly.
	  [ruby-core:62060] [Bug #9749]

Wed Apr 16 09:51:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_pkey.c (ossl_pkey_verify): as EVP_VerifyFinal()
	  finalizes only a copy of the digest context, the context must be
	  cleaned up after initialization by EVP_MD_CTX_cleanup() or a
	  memory leak will occur.  [ruby-core:62038] [Bug #9743]

Tue Apr 15 19:36:42 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (rb_w32_cmdvector): removed.

	* win32/win32.c (rb_w32_sysinit): use WCHAR version of GetCommandLine()
	  internally.

	* win32/win32.c (w32_cmdvector): renamed from rb_w32_cmdvector.  use